@@ -10,7 +10,8 @@
   
 * Minor enhancements
   
-  * Add support for clicking areas of an image map (Alex Lang)
+  * Support selecting options by their values (Alex Lang)
+  * Support for clicking areas of an image map (Alex Lang)
   * Add should_see and should_not_see for verifying HTML response bodys
   * Support relative links, including href="?foo=bar" (Kyle Hargraves)
   * Separated Rails-specific code from the Webrat core to make it easier to use Webrat with other environments
